package br.univille.projfabsoftcashflow.entity;

public class Categoria {
    private String nome;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }
}